[package]
authors = ["Martin Disch <martindisch@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "oscore-demo"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
panic-semihosting = "0.5.3"
heapless = "0.5.1"
alt-stm32f30x-hal = { version = "0.22.1", features = ["stm32f303", "rt"] }

[dependencies.enc28j60]
git = "https://github.com/martindisch/enc28j60"
rev = "8e941af24c4dc9ef41232602fabd7a854287e460"

[dependencies.jnet]
git = "https://github.com/japaric/jnet"
rev = "b5bd70cb998b1e01236f6b07ebc516a0359fde3d"

# these are necessary to stop RLS from trying to find tests and complainining
[[bin]]
name = "oscore-demo"
test = false
bench = false
[lib]
test = false
bench = false

[profile.release]
codegen-units = 1   # better optimizations
debug = true        # symbols are nice and don't increase the size on flash
lto = true          # better optimizations
opt-level = "z"     # optimize for size
