[workspace]
members = [
    "server",
    "client",
    "proxy",
    "util",
    "desktop-client",
]

[profile.release]
codegen-units = 1   # better optimizations
debug = true        # symbols are nice and don't increase the size on flash
lto = true          # better optimizations
opt-level = "z"     # optimize for size
