[package]
authors = ["Martin Disch <martindisch@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "client"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
panic-semihosting = "0.5.3"
stm32f4xx-hal = { version = "0.5.0", features = ["rt", "stm32f407"] }
coap-lite = { version = "0.3.0", default-features = false }
alloc-cortex-m = "0.3.5"
embedded-hal = "0.2.3"
util = { path = "../util" }

[dependencies.w5500]
git = "https://github.com/kellerkindt/w5500"
rev = "f8e6bcf20adfca6cffaeff72971877d2c0890a42"

[dependencies.oscore]
git = "https://github.com/martindisch/oscore"
rev = "8db91495e501468315cd824e9524a364c03655bd"
default-features = false

# these are necessary to stop RLS from trying to find tests and complainining
[[bin]]
name = "client"
test = false
bench = false
[lib]
test = false
bench = false
