[package]
name = "desktop-client"
version = "0.1.0"
authors = ["Martin Disch <martindisch@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
coap-lite = "0.3.0"
rand = "0.7.2"

[dependencies.oscore]
git = "https://github.com/martindisch/oscore"
rev = "8db91495e501468315cd824e9524a364c03655bd"
