[package]
name = "desktop-client"
version = "0.1.0"
authors = ["Martin Disch <martindisch@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
coap-lite = "0.3.0"
rand = "0.7.2"

[dependencies.oscore]
git = "https://github.com/martindisch/oscore"
rev = "59ad9d84555e3eec5e4d1fd7c2015275f77fa8a0"
