[package]
authors = ["Martin Disch <martindisch@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "server"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
panic-semihosting = "0.5.3"
alt-stm32f30x-hal = { version = "0.22.1", features = ["stm32f303", "rt"] }
coap-lite = { version = "0.3.0", default-features = false }
alloc-cortex-m = "0.3.5"
embedded-hal = "0.2.3"
util = { path = "../util" }

[dependencies.w5500]
git = "https://github.com/kellerkindt/w5500"
rev = "f8e6bcf20adfca6cffaeff72971877d2c0890a42"

[dependencies.oscore]
git = "https://github.com/martindisch/oscore"
rev = "59ad9d84555e3eec5e4d1fd7c2015275f77fa8a0"
default-features = false

# these are necessary to stop RLS from trying to find tests and complainining
[[bin]]
name = "server"
test = false
bench = false
[lib]
test = false
bench = false
